# simplhdl-tinytapeout

./: LICENSE  README.md  pyproject.toml
src/tinytapeout/: __init__.py  tinytapeout.py
